native/include/photon/photon.h

/* ------------------------------------------------------------------------ */
/* Scalars                                                                    */
/* ------------------------------------------------------------------------ */

/** 0 = false, non-zero = true. Never use C `bool` across the boundary. */
typedef int32_t ph_bool;
/** Opaque generation-tagged handles. 0 is always invalid. */
typedef uint64_t ph_plot;
typedef uint64_t ph_layer;
/** A 3-D scene. Its layers use ph_layer, from the same table as a plot's. */
typedef uint64_t ph_plot3d;
/* Pointer input ----------------------------------------------------------- */

typedef int32_t ph_button;
typedef int32_t ph_modifiers;
/**
 * Packed RGBA, one byte per channel, red in the most significant byte:
 * 0xRRGGBBAA. Bindings can compute this without calling us.
 *
 * PH_COLOR_AUTO (0 — transparent black) means "let the theme or palette
 * decide". Fully transparent black is never a useful explicit color, so it is
 * free to spend as the sentinel.
 */
typedef uint32_t ph_color;
/** Inclusive data-space interval. */
typedef struct ph_range {
  double lo;
  double hi;
} ph_range;
/* ------------------------------------------------------------------------ */
/* Result codes                                                               */
/* ------------------------------------------------------------------------ */

typedef int32_t ph_result;
/** Mirrors core `InteractionMode`. */
typedef int32_t ph_mode;
/** Mirrors core `RenderType` — the GL buffer-usage hint. */
typedef int32_t ph_render_type;
/**
 * Where a single frame goes. The host makes its GL context current, then hands
 * over a framebuffer and a viewport rectangle in device pixels.
 *
 * This one struct is the whole reason the engine is host-agnostic:
 *   GLFW      framebuffer = 0, rect = the window
 *   Qt/QML    framebuffer = QQuickFramebufferObject's FBO, flip_y = 1
 *   Avalonia  framebuffer = the control's FBO
 *   LWJGL     framebuffer = 0
 * No copies in any of those. Hosts with no GL interop at all (JavaFX, WPF)
 * use ph_plot_render_pixels instead.
 */
typedef struct ph_frame_target {
  uint32_t struct_size;
  /** GL framebuffer object name. 0 = the host's default framebuffer. */
  uint32_t framebuffer;
  /** Viewport within that framebuffer, in device pixels, origin bottom-left. */
  int32_t  x;
  int32_t  y;
  int32_t  width;
  int32_t  height;
  /** Device pixel ratio — device px per logical px. 0 means 1.0. */
  float    dpr;
  /**
   * Set when the target's origin is top-left rather than GL's bottom-left.
   * Qt's FBOs need this; GLFW's default framebuffer does not.
   */
  ph_bool  flip_y;
} ph_frame_target;
/* ------------------------------------------------------------------------ */
/* Colormaps and palettes                                                     */
/* ------------------------------------------------------------------------ */

/**
 * How a layer asks for a continuous colormap.
 *
 * `name` is a built-in ("viridis", "plasma", "inferno", "magma", "cividis",
 * "turbo", "grayscale", "coolwarm", "RdBu", "BrBG", "spectral", "twilight") or
 * anything passed to ph_colormap_register. Unknown names — and NULL — resolve to
 * viridis rather than failing, because a chart that draws in the wrong colours
 * is easier to notice than one that does not draw.
 *
 * `stops` overrides the name with anchors given inline, spaced evenly and
 * interpolated linearly. Their alpha is ignored; a colormap carries no opacity.
 */
typedef struct ph_colormap_spec {
  uint32_t        struct_size;
  const char*     name;
  const ph_color* stops;
  int32_t         stop_count;
  /** High values take the low end's colour. */
  ph_bool         reverse;
  /** 0 is continuous; otherwise the ramp is flattened into this many bands. */
  int32_t         discrete_steps;
} ph_colormap_spec;
/* ------------------------------------------------------------------------ */
/* Events                                                                     */
/* ------------------------------------------------------------------------ */

typedef int32_t ph_event_type;
/**
 * A flat, union-free event record. Fields not relevant to `type` are zero.
 *
 * Flat rather than tagged-union because C# and Java marshal a plain struct for
 * free and a union not at all.
 */
typedef struct ph_event {
  uint32_t      struct_size;
  ph_event_type type;
  ph_layer      layer;        /* LAYER_VISIBILITY               */
  ph_range      x;            /* VIEW_CHANGED                   */
  ph_range      y;            /* VIEW_CHANGED (primary y axis)   */
  double        cursor_x;     /* CURSOR_MOVED, data space        */
  double        cursor_y;
  ph_bool       cursor_valid;
  ph_mode       mode;         /* MODE_CHANGED                    */
  ph_bool       visible;      /* LAYER_VISIBILITY                */
  double        point_x;      /* POINT_PICKED, data space        */
  double        point_y;
  int32_t       point_index;  /* POINT_PICKED, -1 when none      */
  ph_bool       point_valid;
} ph_event;
/** Mirrors core `PointCloudOptions`. */
typedef struct ph_pointcloud_desc {
  uint32_t                struct_size;
  const double*           x;
  const double*           y;
  const double*           z;
  int32_t                 count;
  /** Point diameter in pixels. 0 means 4. */
  float                   size;
  ph_color                color;
  /** One value per point through `colormap`. NULL uses the flat colour. */
  const double*           values;
  const ph_colormap_spec* colormap;
  ph_range                domain;
  const char*             name;
  ph_render_type          render_type;
} ph_pointcloud_desc;
PH_API void PH_CALL ph_pointcloud_desc_init(ph_pointcloud_desc* out);
PH_API ph_result PH_CALL ph_plot3d_add_pointcloud(ph_plot3d plot, const ph_pointcloud_desc* desc,
                                                  ph_layer* out);
/** Mirrors core `Line3DOptions`: a polyline through space. */
typedef struct ph_line3d_desc {
  uint32_t       struct_size;
  const double*  x;
  const double*  y;
  const double*  z;
  int32_t        count;
  ph_color       color;
  const char*    name;
  ph_render_type render_type;
} ph_line3d_desc;
PH_API void PH_CALL ph_line3d_desc_init(ph_line3d_desc* out);
PH_API ph_result PH_CALL ph_plot3d_add_line(ph_plot3d plot, const ph_line3d_desc* desc,
                                            ph_layer* out);
/** Mirrors core `Bar3DOptions`: one lit box per cell of a grid. */
typedef struct ph_bar3d_desc {
  uint32_t                struct_size;
  /** Row-major heights, `cols * rows`. */
  const double*           values;
  int32_t                 cols;
  int32_t                 rows;
  ph_range                x;
  ph_range                z;
  /** Bar footprint as a fraction of the cell. 0 means 0.8. */
  double                  fill;
  const ph_colormap_spec* colormap;
  ph_range                domain;
  const char*             name;
  ph_render_type          render_type;
} ph_bar3d_desc;
PH_API void PH_CALL ph_bar3d_desc_init(ph_bar3d_desc* out);
PH_API ph_result PH_CALL ph_plot3d_add_bars(ph_plot3d plot, const ph_bar3d_desc* desc,
                                            ph_layer* out);
/** Mirrors core `Quiver3DOptions`: an arrow per sample, drawn as line segments. */
typedef struct ph_quiver3d_desc {
  uint32_t                struct_size;
  const double*           x;
  const double*           y;
  const double*           z;
  const double*           u;
  const double*           v;
  const double*           w;
  int32_t                 count;
  /** Multiplier on the vector length. 0 means 1. */
  double                  scale;
  ph_color                color;
  /** Colour by magnitude through a ramp instead of the flat colour. */
  ph_bool                 color_by_magnitude;
  const ph_colormap_spec* colormap;
  const char*             name;
  ph_render_type          render_type;
} ph_quiver3d_desc;
PH_API void PH_CALL ph_quiver3d_desc_init(ph_quiver3d_desc* out);
PH_API ph_result PH_CALL ph_plot3d_add_quiver(ph_plot3d plot, const ph_quiver3d_desc* desc,
                                              ph_layer* out);
/**
 * Mirrors core `Contour3DOptions`: iso-height lines of a grid, each drawn at
 * its own level so they stack into a floating topographic map.
 */
typedef struct ph_contour3d_desc {
  uint32_t                struct_size;
  /** Row-major heights, `cols * rows`. */
  const double*           values;
  int32_t                 cols;
  int32_t                 rows;
  ph_range                x;
  ph_range                z;
  /** Evenly-spaced level count. 0 means 10, and is ignored when `level_values` is set. */
  int32_t                 levels;
  /** An explicit level list, which beats `levels`. */
  const double*           level_values;
  int32_t                 level_count;
  /** One colour for every line. PH_COLOR_AUTO colours each level by its value. */
  ph_color                color;
  const ph_colormap_spec* colormap;
  const char*             name;
  ph_render_type          render_type;
} ph_contour3d_desc;
PH_API void PH_CALL ph_contour3d_desc_init(ph_contour3d_desc* out);
PH_API ph_result PH_CALL ph_plot3d_add_contour(ph_plot3d plot, const ph_contour3d_desc* desc,
                                               ph_layer* out);
/** One axis-aligned cuboid: a centre and a full size on each axis. */
typedef struct ph_box3d {
  double   x;
  double   y;
  double   z;
  double   w;
  double   h;
  double   d;
  /** PH_COLOR_AUTO falls back to the layer's colour. */
  ph_color color;
} ph_box3d;
/**
 * Mirrors core `Boxes3DOptions`: lit cuboids, for a voxel scene or a schematic.
 *
 * An opacity below 1 blends without depth sorting, so overlapping translucent
 * boxes can composite out of order — the same caveat the web core carries.
 */
typedef struct ph_boxes3d_desc {
  uint32_t         struct_size;
  const ph_box3d*  boxes;
  int32_t          count;
  /** Fill for boxes that carry no colour of their own. */
  ph_color         color;
  float            opacity;
  const char*      name;
  ph_render_type   render_type;
} ph_boxes3d_desc;
PH_API void PH_CALL ph_boxes3d_desc_init(ph_boxes3d_desc* out);
PH_API ph_result PH_CALL ph_plot3d_add_boxes(ph_plot3d plot, const ph_boxes3d_desc* desc,
                                             ph_layer* out);
/**
 * Mirrors core `IsosurfaceOptions`: the level set of a scalar volume, extracted
 * by marching cubes and drawn as a lit mesh.
 *
 * `values` is `nx * ny * nz` with x varying fastest. A corner counts as inside
 * when its value is *below* `level`, which is the convention the tables were
 * written for; normals come from the volume's own gradient, so the surface
 * shades smoothly rather than showing the lattice it was cut from.
 */
typedef struct ph_isosurface_desc {
  uint32_t       struct_size;
  const double*  values;
  int32_t        nx;
  int32_t        ny;
  int32_t        nz;
  /** World extent of the grid. An empty range means 0..n-1. */
  ph_range       x;
  ph_range       y;
  ph_range       z;
  double         level;
  ph_color       color;
  const char*    name;
  ph_render_type render_type;
} ph_isosurface_desc;
PH_API void PH_CALL ph_isosurface_desc_init(ph_isosurface_desc* out);
PH_API ph_result PH_CALL ph_plot3d_add_isosurface(ph_plot3d plot, const ph_isosurface_desc* desc,
                                                  ph_layer* out);
/*
 * Eight of the web core's nine 3-D layers are here. The ninth, `volume`,
 * raymarches a 3-D texture — which means TexImage3D and TEXTURE_3D in the GL
 * loader, and a camera in the layer's own local space. It is additive and
 * listed in native/TODO.md.
 */

/* Interaction, rendering and events, in the same shapes as the 2-D plot. */

PH_API ph_result PH_CALL ph_plot3d_pointer_down(ph_plot3d plot, double px, double py,
                                                ph_button button, ph_modifiers mods);
PH_API ph_result PH_CALL ph_plot3d_pointer_move(ph_plot3d plot, double px, double py,
                                                ph_modifiers mods);
PH_API ph_result PH_CALL ph_plot3d_pointer_up(ph_plot3d plot, double px, double py,
                                              ph_button button, ph_modifiers mods);
PH_API ph_result PH_CALL ph_plot3d_wheel(ph_plot3d plot, double px, double py, double delta_y,
                                         ph_modifiers mods);
PH_API ph_result PH_CALL ph_plot3d_render(ph_plot3d plot, const ph_frame_target* target);
PH_API ph_result PH_CALL ph_plot3d_render_pixels(ph_plot3d plot, int32_t width, int32_t height,
                                                 float dpr, uint8_t* out_rgba,
                                                 int32_t stride_bytes);
PH_API ph_bool PH_CALL ph_plot3d_needs_redraw(ph_plot3d plot);
PH_API ph_result PH_CALL ph_plot3d_poll_event(ph_plot3d plot, ph_event* out);
PH_API ph_result PH_CALL ph_plot3d_clear_events(ph_plot3d plot);
/* ------------------------------------------------------------------------ */
/* Interaction                                                                */
/* ------------------------------------------------------------------------ */

/*
 * Input is host-driven on purpose. A mouse event is three different types in
 * GLFW, Qt and WPF; only the *response* to one is shared, and that is what
 * lives here. Coordinates are logical pixels relative to the plot's top-left,
 * matching every toolkit's own convention.
 */

PH_API ph_result PH_CALL ph_plot_set_mode(ph_plot plot, ph_mode mode);
PH_API ph_result PH_CALL ph_plot_get_mode(ph_plot plot, ph_mode* out);
PH_API ph_result PH_CALL ph_plot_pointer_down(ph_plot plot, double px, double py, ph_button button, ph_modifiers mods);
PH_API ph_result PH_CALL ph_plot_pointer_move(ph_plot plot, double px, double py, ph_modifiers mods);
PH_API ph_result PH_CALL ph_plot_pointer_up(ph_plot plot, double px, double py, ph_button button, ph_modifiers mods);
/** The cursor left the plot: clears hover state. */
PH_API ph_result PH_CALL ph_plot_pointer_leave(ph_plot plot);
/**
 * Wheel input. `delta_y` follows the browser convention the core was written
 * against: positive scrolls down and zooms out, factor = exp(delta_y * 0.001).
 * GLFW's yoffset is inverted and scaled by roughly -100 to match.
 */
PH_API ph_result PH_CALL ph_plot_wheel(ph_plot plot, double px, double py, double delta_y, ph_modifiers mods);
/** Pan by a pixel delta, as a drag would. */
PH_API ph_result PH_CALL ph_plot_pan_pixels(ph_plot plot, double dx, double dy);
/**
 * Zoom about a point given in normalized plot-region coordinates: (0,0) is the
 * bottom-left of the plot region, (1,1) the top-right. `factor` > 1 zooms out.
 */
PH_API ph_result PH_CALL ph_plot_zoom_around(ph_plot plot, double nx, double ny, double factor);
/** Convert logical pixels within the plot to data space, and back. */
PH_API ph_result PH_CALL ph_plot_data_at_pixel(ph_plot plot, double px, double py, double* out_x, double* out_y);
PH_API ph_result PH_CALL ph_plot_pixel_at_data(ph_plot plot, double x, double y, double* out_px, double* out_py);
/* ------------------------------------------------------------------------ */
/* Rendering                                                                  */
/* ------------------------------------------------------------------------ */

/**
 * Draw one frame into the host's framebuffer. The host's GL context must be
 * current on the calling thread. Zero copies.
 */
PH_API ph_result PH_CALL ph_plot_render(ph_plot plot, const ph_frame_target* target);
/**
 * Fallback for hosts with no GL interop (JavaFX, classic WPF): render offscreen
 * and read back into `out_rgba`, which must hold at least
 * `stride_bytes * height` bytes with `stride_bytes >= width * 4`.
 *
 * `width` and `height` are the output image in pixels, top row first, RGBA8
 * with premultiplied alpha. The chart is laid out at `width / dpr` by
 * `height / dpr` logical pixels — so a 2x image of a 400x300 chart is
 * `(800, 600, dpr = 2)`. The plot's own size is not changed.
 *
 * The host's GL context must still be current: this renders, it does not
 * rasterize on the CPU.
 *
 * This is the native descendant of the browser core's shared-context blit: on
 * the web that readback is mandatory, here it is the compatibility path.
 */
PH_API ph_result PH_CALL ph_plot_render_pixels(ph_plot plot, int32_t width, int32_t height,
                                               float dpr, uint8_t* out_rgba, int32_t stride_bytes);
/** Non-zero when state changed since the last render and a frame is owed. */
PH_API ph_bool PH_CALL ph_plot_needs_redraw(ph_plot plot);
/* ------------------------------------------------------------------------ */
/* Event queue                                                                */
/* ------------------------------------------------------------------------ */

/**
 * Pop one queued event. Returns PH_OK with `out->type == PH_EVENT_NONE` when
 * the queue is empty, so a host can drain it with a plain loop:
 *
 *     ph_event ev;
 *     while (ph_plot_poll_event(plot, &ev) == PH_OK && ev.type != PH_EVENT_NONE) {
 *         ...
 *     }
 */
PH_API ph_result PH_CALL ph_plot_poll_event(ph_plot plot, ph_event* out);
/** Drop every queued event without processing it. */
PH_API ph_result PH_CALL ph_plot_clear_events(ph_plot plot);