native/bindings/csharp/Photon.g.cs


    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_pointcloud_desc_init")]
    public static extern void ph_pointcloud_desc_init(out ph_pointcloud_desc @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_pointcloud")]
    public static extern int ph_plot3d_add_pointcloud(ulong plot, IntPtr desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_pointcloud")]
    public static extern int ph_plot3d_add_pointcloud(ulong plot, in ph_pointcloud_desc desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_line3d_desc_init")]
    public static extern void ph_line3d_desc_init(out ph_line3d_desc @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_line")]
    public static extern int ph_plot3d_add_line(ulong plot, IntPtr desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_line")]
    public static extern int ph_plot3d_add_line(ulong plot, in ph_line3d_desc desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_bar3d_desc_init")]
    public static extern void ph_bar3d_desc_init(out ph_bar3d_desc @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_bars")]
    public static extern int ph_plot3d_add_bars(ulong plot, IntPtr desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_bars")]
    public static extern int ph_plot3d_add_bars(ulong plot, in ph_bar3d_desc desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_quiver3d_desc_init")]
    public static extern void ph_quiver3d_desc_init(out ph_quiver3d_desc @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_quiver")]
    public static extern int ph_plot3d_add_quiver(ulong plot, IntPtr desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_quiver")]
    public static extern int ph_plot3d_add_quiver(ulong plot, in ph_quiver3d_desc desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_contour3d_desc_init")]
    public static extern void ph_contour3d_desc_init(out ph_contour3d_desc @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_contour")]
    public static extern int ph_plot3d_add_contour(ulong plot, IntPtr desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_contour")]
    public static extern int ph_plot3d_add_contour(ulong plot, in ph_contour3d_desc desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_boxes3d_desc_init")]
    public static extern void ph_boxes3d_desc_init(out ph_boxes3d_desc @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_boxes")]
    public static extern int ph_plot3d_add_boxes(ulong plot, IntPtr desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_boxes")]
    public static extern int ph_plot3d_add_boxes(ulong plot, in ph_boxes3d_desc desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_isosurface_desc_init")]
    public static extern void ph_isosurface_desc_init(out ph_isosurface_desc @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_isosurface")]
    public static extern int ph_plot3d_add_isosurface(ulong plot, IntPtr desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_add_isosurface")]
    public static extern int ph_plot3d_add_isosurface(ulong plot, in ph_isosurface_desc desc, out ulong @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_pointer_down")]
    public static extern int ph_plot3d_pointer_down(ulong plot, double px, double py, int button, int mods);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_pointer_move")]
    public static extern int ph_plot3d_pointer_move(ulong plot, double px, double py, int mods);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_pointer_up")]
    public static extern int ph_plot3d_pointer_up(ulong plot, double px, double py, int button, int mods);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_wheel")]
    public static extern int ph_plot3d_wheel(ulong plot, double px, double py, double delta_y, int mods);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_render")]
    public static extern int ph_plot3d_render(ulong plot, IntPtr target);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_render")]
    public static extern int ph_plot3d_render(ulong plot, in ph_frame_target target);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_render_pixels")]
    public static extern int ph_plot3d_render_pixels(ulong plot, int width, int height, float dpr, byte[] out_rgba, int stride_bytes);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_needs_redraw")]
    public static extern int ph_plot3d_needs_redraw(ulong plot);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_poll_event")]
    public static extern int ph_plot3d_poll_event(ulong plot, out ph_event @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot3d_clear_events")]
    public static extern int ph_plot3d_clear_events(ulong plot);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_set_mode")]
    public static extern int ph_plot_set_mode(ulong plot, int mode);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_get_mode")]
    public static extern int ph_plot_get_mode(ulong plot, out int @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_pointer_down")]
    public static extern int ph_plot_pointer_down(ulong plot, double px, double py, int button, int mods);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_pointer_move")]
    public static extern int ph_plot_pointer_move(ulong plot, double px, double py, int mods);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_pointer_up")]
    public static extern int ph_plot_pointer_up(ulong plot, double px, double py, int button, int mods);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_pointer_leave")]
    public static extern int ph_plot_pointer_leave(ulong plot);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_wheel")]
    public static extern int ph_plot_wheel(ulong plot, double px, double py, double delta_y, int mods);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_pan_pixels")]
    public static extern int ph_plot_pan_pixels(ulong plot, double dx, double dy);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_zoom_around")]
    public static extern int ph_plot_zoom_around(ulong plot, double nx, double ny, double factor);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_data_at_pixel")]
    public static extern int ph_plot_data_at_pixel(ulong plot, double px, double py, out double out_x, out double out_y);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_pixel_at_data")]
    public static extern int ph_plot_pixel_at_data(ulong plot, double x, double y, out double out_px, out double out_py);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_render")]
    public static extern int ph_plot_render(ulong plot, IntPtr target);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_render")]
    public static extern int ph_plot_render(ulong plot, in ph_frame_target target);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_render_pixels")]
    public static extern int ph_plot_render_pixels(ulong plot, int width, int height, float dpr, byte[] out_rgba, int stride_bytes);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_needs_redraw")]
    public static extern int ph_plot_needs_redraw(ulong plot);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_poll_event")]
    public static extern int ph_plot_poll_event(ulong plot, out ph_event @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_plot_clear_events")]
    public static extern int ph_plot_clear_events(ulong plot);

}
